Anonymous | Login | 2021-01-17 00:31 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] | [ Issue History ] [ Print ] | ||||||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||||||
0029926 | Open CASCADE | [OCCT] OCCT:Modeling Algorithms | public | 2018-07-04 09:17 | 2020-09-14 22:53 | ||||||||
Reporter | kgv | ||||||||||||
Assigned To | ifv | ||||||||||||
Priority | normal | Severity | minor | ||||||||||
Status | assigned | Resolution | open | ||||||||||
Platform | OS | OS Version | |||||||||||
Product Version | [OCCT] 6.3.1 | ||||||||||||
Target Version | [OCCT] 7.6.0* | Fixed in Version | |||||||||||
Summary | 0029926: Modeling Algorithms - NULL dereference within GProp_GProps on Edge without 2D Curve | ||||||||||||
Description | GProp_GProps crashes when passing an Edge without 2D Curve (NULL dereference). | ||||||||||||
Steps To Reproduce | pload MODELING VISUALIZATION restore [locate_data bug29926.brep] f vinit View1 vdisplay -dispMode 1 f vfit sprops f vprops f Result: ** Exception ** 0000000005334190 : OSD_Exception_ACCESS_VIOLATION: ACCESS VIOLATION at address 0x0000000000000000 during 'READ' operation | ||||||||||||
Tags | No tags attached. | ||||||||||||
Test case number | |||||||||||||
Attached Files | ![]() | ||||||||||||
![]() |
|||||||
|
![]() |
|
(0077257) git (administrator) 2018-07-04 12:13 |
Branch CR29926 has been created by kgv. SHA-1: 451be43367813fa0e9e6945ef437d183f0cc10b5 Detailed log of new commits: Author: kgv Date: Wed Jul 4 12:09:50 2018 +0300 0029926: Modeling Algorithms - NULL dereference within GProp_GProps on Edge without 2D Curve Added NULL check to BRepGProp_Face::Load(). |
(0077258) kgv (developer) 2018-07-04 12:15 edited on: 2018-07-04 12:15 |
Patch CR29926 just adds NULL check. As has been discussed, it is proposed adding an interface to high-level tools computing shape properties, which will return the completeness of computed values (e.g. enumeration - Complete, Failed and Partial). |
(0077272) git (administrator) 2018-07-04 17:54 |
Branch CR29926 has been updated forcibly by kgv. SHA-1: b1ca535ea743b5f3ec4d08942ba2d1529d04bcb7 |
![]() |
|||
Date Modified | Username | Field | Change |
2018-07-04 09:17 | kgv | New Issue | |
2018-07-04 09:17 | kgv | Assigned To | => msv |
2018-07-04 09:18 | kgv | Steps to Reproduce Updated | View Revisions |
2018-07-04 09:18 | kgv | Steps to Reproduce Updated | View Revisions |
2018-07-04 09:19 | kgv | File Added: bug29926.brep | |
2018-07-04 09:20 | kgv | Relationship added | related to 0029457 |
2018-07-04 09:22 | kgv | Steps to Reproduce Updated | View Revisions |
2018-07-04 09:33 | kgv | Product Version | 7.3.0 => 6.3.1 |
2018-07-04 12:13 | git | Note Added: 0077257 | |
2018-07-04 12:15 | kgv | Note Added: 0077258 | |
2018-07-04 12:15 | kgv | Note Edited: 0077258 | View Revisions |
2018-07-04 12:47 | msv | Assigned To | msv => ifv |
2018-07-04 12:47 | msv | Status | new => assigned |
2018-07-04 17:54 | git | Note Added: 0077272 | |
2018-07-09 10:12 | kgv | Relationship added | parent of 0029939 |
2019-08-12 18:01 | msv | Target Version | 7.4.0 => 7.5.0 |
2020-09-14 22:53 | msv | Target Version | 7.5.0 => 7.6.0* |
Copyright © 2000 - 2021 MantisBT Team |