0029926: Modeling Algorithms - NULL dereference within GProp_GProps on Edge without 2D Curve

Added NULL check to BRepGProp_Face::Load().